Closed
Bug 1315866
Opened 8 years ago
Closed 8 years ago
Pass WebGL2 conformance deqp/functional/gles3/negativetextureapi.html
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: ethlin, Assigned: jgilbert)
References
()
Details
Attachments
(1 file, 4 obsolete files)
58 bytes,
text/x-review-board-request
|
ethlin
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
failed: negativeTextureApi.copytexsubimage2d_max_level: Expected gl.INVALID_VALUE, but got gl.INVALID_OPERATION. failed: negativeTextureApi.texsubimage2d_max_level: Expected gl.INVALID_VALUE, but got gl.INVALID_OPERATION. failed: negativeTextureApi.texsubimage3d_max_level: Expected gl.INVALID_VALUE, but got gl.INVALID_OPERATION. failed: negativeTextureApi.copytexsubimage3d_max_level: Expected gl.INVALID_VALUE, but got gl.INVALID_OPERATION.
Reporter | ||
Comment 1•8 years ago
|
||
We should check the max texture size to return correct error type.
Attachment #8808467 -
Flags: review?(jgilbert)
Reporter | ||
Comment 2•8 years ago
|
||
There is some tabs in the original patch. Replace them to spaces.
Attachment #8808467 -
Attachment is obsolete: true
Attachment #8808467 -
Flags: review?(jgilbert)
Attachment #8808504 -
Flags: review?(jgilbert)
Reporter | ||
Comment 3•8 years ago
|
||
Sorry, the last patch was wrong. This should be the correct one.
Attachment #8808504 -
Attachment is obsolete: true
Attachment #8808504 -
Flags: review?(jgilbert)
Attachment #8808921 -
Flags: review?(jgilbert)
Assignee | ||
Comment 4•8 years ago
|
||
Comment on attachment 8808921 [details] [diff] [review] check max size Review of attachment 8808921 [details] [diff] [review]: ----------------------------------------------------------------- This should already be handled properly in ValidateTexImageSpecification. Please re-check.
Attachment #8808921 -
Flags: review?(jgilbert) → review-
Reporter | ||
Comment 5•8 years ago
|
||
(In reply to Jeff Gilbert [:jgilbert] from comment #4) > Comment on attachment 8808921 [details] [diff] [review] > check max size > > Review of attachment 8808921 [details] [diff] [review]: > ----------------------------------------------------------------- > > This should already be handled properly in ValidateTexImageSpecification. > Please re-check. Right, I should reuse the code in ValidateTexImageSpecification.
Reporter | ||
Comment 6•8 years ago
|
||
I move the check from ValidateTexImageSpecification to ValidateTexImage. So ValidateTexImageSelection (for TexSubImage and CompressedTexSubImage) can do this check too.
Attachment #8808921 -
Attachment is obsolete: true
Attachment #8809292 -
Flags: review?(jgilbert)
Assignee | ||
Comment 7•8 years ago
|
||
(In reply to Ethan Lin[:ethlin] from comment #6) > Created attachment 8809292 [details] [diff] [review] > check max size > > I move the check from ValidateTexImageSpecification to ValidateTexImage. So > ValidateTexImageSelection (for TexSubImage and CompressedTexSubImage) can do > this check too. It should only be necessary for Specification. Too large width/height/depth will get automatically checked by Selection checking against the previously-specified extents.
Assignee | ||
Comment 8•8 years ago
|
||
It's likely this test is wrong. What's the actual invocation here? It's possible it's wrong in more than one way. Occasionally the conformance tests accidentally assume that some errors will occur before others, when actually any applicable error can be returned.
Assignee | ||
Comment 9•8 years ago
|
||
Comment on attachment 8809292 [details] [diff] [review] check max size Review of attachment 8809292 [details] [diff] [review]: ----------------------------------------------------------------- r- for now, because I don't think this is the correct solution.
Attachment #8809292 -
Flags: review?(jgilbert) → review-
Assignee | ||
Updated•8 years ago
|
Blocks: webgl2-blockers
Assignee | ||
Comment 10•8 years ago
|
||
This crashes on Windows+Intel.
Assignee | ||
Comment 11•8 years ago
|
||
Half the issue is the test is wrong: https://github.com/KhronosGroup/WebGL/pull/2207
See Also: → https://github.com/KhronosGroup/WebGL/pull/2207
Assignee | ||
Updated•8 years ago
|
Assignee: ethlin → jgilbert
Comment hidden (mozreview-request) |
Reporter | ||
Comment 14•8 years ago
|
||
mozreview-review |
Comment on attachment 8818769 [details] Bug 1315866 - Always-too-large level during tex image specification is INVALID_VALUE. - https://reviewboard.mozilla.org/r/98710/#review99230
Attachment #8818769 -
Flags: review?(ethlin) → review+
Comment 15•8 years ago
|
||
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/013060399bd7 Always-too-large level during tex image specification is INVALID_VALUE. - r=ethlin
Comment 16•8 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/013060399bd7
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Assignee | ||
Updated•7 years ago
|
Attachment #8809292 -
Attachment is obsolete: true
Assignee | ||
Comment 17•7 years ago
|
||
Comment on attachment 8818769 [details] Bug 1315866 - Always-too-large level during tex image specification is INVALID_VALUE. - Approval Request Comment [Feature/Bug causing the regression]: webgl2 [User impact if declined]: [Is this code covered by automated tests?]: [Has the fix been verified in Nightly?]: [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: [Why is the change risky/not risky?]: [String changes made/needed]:
Attachment #8818769 -
Flags: approval-mozilla-beta?
Attachment #8818769 -
Flags: approval-mozilla-aurora?
Assignee | ||
Updated•7 years ago
|
Comment 18•7 years ago
|
||
Comment on attachment 8818769 [details] Bug 1315866 - Always-too-large level during tex image specification is INVALID_VALUE. - Fix a WebGL 2 related issue. Beta51+ and Aurora52+. Should be in 51 beta 10.
Attachment #8818769 -
Flags: approval-mozilla-beta?
Attachment #8818769 -
Flags: approval-mozilla-beta+
Attachment #8818769 -
Flags: approval-mozilla-aurora?
Attachment #8818769 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 19•7 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/c6107c5fe98e
Assignee | ||
Comment 20•7 years ago
|
||
https://hg.mozilla.org/releases/mozilla-beta/rev/9e8e044f7b78
You need to log in
before you can comment on or make changes to this bug.
Description
•