Bug 1315866 - Always-too-large level during tex image specification is INVALID_VALUE. - r=ethlin a=gchang

MozReview-Commit-ID: 9fBznguuq1l